# Chron-Track

./: .flake8  .gitignore  LICENSE  README.md  app.py  hello.py  main.py  pyproject.toml
.github/workflows/: ci-workflows.yml
src/: basic_class.py  iaaf.py  perf_tracker.py  perfs_tracker.py  st_utils.py  time_an_pace.py  type.py
tests/: test_iaaf.py  test_perf_tracker.py  test_perfs.py  test_time_and_pace.py
