[project]
name = "chrontrack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "--strict-markers --disable-warnings"
pythonpath = "."
testpaths = "tests"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
